app/static/css/styles.css
body{
    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/background2.png); 
    background-repeat: repeat;
}

#main-card{
    margin-top: 10px;
    margin-bottom: 10px;
}

#settings-dropdown{
    width: 270px;
}

.container{
    padding-bottom: 10px;
}

/* #heading-card{
    text-align: center;
} */

#subheading-card{
    margin-top: 5px;
}

#vote-button{
    position: fixed; 
    right: 10; 
    bottom: 10; 
    z-index: 1;
}

#error{
    color: red; 
}

#checkbox-error{
    color: red; 
}

#candidate-card{
    min-height: 500px;
}

#card-group{
    margin-top: 0px;
}

#election-notice{
    color: red; 
}

.candidate-img{
  /* max-width: 300px; */
  height: 400px;
  overflow: hidden;
  object-fit: cover;
}

.showerror{
  display: block;
}

.error{
  display: none;
}

/* CSS for responsive iframe */
/* ========================= */

/* outer wrapper: set max-width & max-height; max-height greater than padding-bottom % will be ineffective and height will = padding-bottom % of max-width */
#Iframe-Master-CC-and-Rs {
    max-width: 100%;
    max-height: 100%; 
    overflow: hidden;
  }
  
  /* inner wrapper: make responsive */
  .responsive-wrapper {
    position: relative;
    height: 0;    /* gets height from padding-bottom */
    
    /* put following styles (necessary for overflow and scrolling handling on mobile devices) inline in .responsive-wrapper around iframe because not stable in CSS:
      -webkit-overflow-scrolling: touch; overflow: auto; */
    
  }
   
  .responsive-wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    
    margin: 0;
    padding: 0;
    border: none;
  }
  
  /* padding-bottom = h/w as % -- sets aspect ratio */
  /* YouTube video aspect ratio */
  .responsive-wrapper-wxh-572x612 {
    padding-bottom: 107%;
  }
  
  /* general styles */
  /* ============== */
  /* .set-border {
    border: 5px inset #4f4f4f;
  }
  .set-box-shadow { 
    -webkit-box-shadow: 4px 4px 14px #4f4f4f;
    -moz-box-shadow: 4px 4px 14px #4f4f4f;
    box-shadow: 4px 4px 14px #4f4f4f;
  } */
  .set-padding {
    padding: 40px;
  }
  .set-margin {
    margin: 30px;
  }
  .center-block-horiz {
    margin-left: auto !important;
    margin-right: auto !important;
  }

  /* .ineligible-constituency {
      color: white;
  } */

